
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Performance_Tracker_Framework)

SET(INC_DIR ${CMAKE_SOURCE_DIR}/../include)
SET(SRC_DIR ${CMAKE_SOURCE_DIR}/../src)
SET(BIN_DIR ${CMAKE_SOURCE_DIR}/../bin)

SET(LIBRARY_OUTPUT_PATH     ${CMAKE_SOURCE_DIR}/../lib/)
SET(EXECUTABLE_OUTPUT_PATH  ${CMAKE_SOURCE_DIR}/../bin/)
MAKE_DIRECTORY(${LIBRARY_OUTPUT_PATH})
MAKE_DIRECTORY(${EXECUTABLE_OUTPUT_PATH})

INCLUDE_DIRECTORIES(
    ${INC_DIR}
)

FILE(GLOB PerformanceTracker_SRC ${CMAKE_SOURCE_DIR}/../src/*.cpp)

ADD_LIBRARY(
    PerformanceTracker STATIC ${PerformanceTracker_SRC}
)

OPTION(BUILD_TESTS "Build and execute tests" ON)

IF( BUILD_TESTS )
    ENABLE_TESTING()
    SET(TEST_SRC_DIR ${CMAKE_SOURCE_DIR}/../tests/)
    FILE(GLOB Tests_SRC ${TEST_SRC_DIR}/*.cpp)
    FOREACH(TESTNAME ${Tests_SRC})
        GET_FILENAME_COMPONENT(BASENAME ${TESTNAME} NAME_WE)
        ADD_EXECUTABLE(${BASENAME} ${TESTNAME})
        TARGET_LINK_LIBRARIES(${BASENAME} PerformanceTracker)
        ADD_TEST("${BASENAME}" ${BIN_DIR}/${BASENAME})
    ENDFOREACH(TESTNAME ${Tests_SRC})
ENDIF( BUILD_TESTS )

